[gd_scene load_steps=17 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://graphics/snail.png" type="Texture" id=2]
[ext_resource path="res://graphics/game.png" type="Texture" id=3]
[ext_resource path="res://graphics/hand2.png" type="Texture" id=4]
[ext_resource path="res://graphics/hand1.png" type="Texture" id=5]
[ext_resource path="res://graphics/font.fnt" type="BitmapFont" id=6]
[ext_resource path="res://graphics/winner.png" type="Texture" id=7]
[ext_resource path="res://graphics/snailp.png" type="Texture" id=8]
[ext_resource path="res://graphics/go.png" type="Texture" id=9]

[sub_resource type="BitmapFont" id=1]
height = 5.0
fallback = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.752941, 0.752941, 0.752941, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.752941, 0.752941, 0.752941, 1 )

[sub_resource type="DynamicFont" id=5]

[sub_resource type="Animation" id=6]
resource_name = "press_cont"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/C/PressCont:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/C/PressPlay:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ true, true, false ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="TimerBtnReset" type="Timer" parent="."]
wait_time = 0.4

[node name="TimerOpponentOne" type="Timer" parent="."]
wait_time = 0.1

[node name="TimerOpponentTwo" type="Timer" parent="."]
wait_time = 0.1

[node name="TimerContinue" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="GUI" type="CanvasLayer" parent="."]
layer = -1

[node name="C" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGColor" type="ColorRect" parent="GUI/C"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGTexture" type="TextureRect" parent="GUI/C"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ByGGBot" type="Label" parent="GUI/C"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 72.0
margin_top = 96.0
margin_right = -64.0
margin_bottom = 104.0
rect_min_size = Vector2( 16, 8 )
custom_fonts/font = SubResource( 1 )
text = "A GAME BY GGBOT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeText" type="Label" parent="GUI/C"]
margin_left = 72.0
margin_top = 32.0
margin_right = 104.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 8 )
custom_fonts/font = SubResource( 1 )
text = "TIME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="GUI/C"]
margin_left = 79.5
margin_top = 40.0
margin_right = 95.5
margin_bottom = 48.0
rect_min_size = Vector2( 16, 8 )
custom_fonts/font = SubResource( 1 )
text = "00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeBestText" type="Label" parent="GUI/C"]
margin_left = 152.0
margin_top = 32.0
margin_right = 184.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 8 )
custom_fonts/font = SubResource( 1 )
text = "BEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeBest" type="Label" parent="GUI/C"]
margin_left = 159.5
margin_top = 40.0
margin_right = 175.5
margin_bottom = 48.0
rect_min_size = Vector2( 16, 8 )
custom_fonts/font = SubResource( 1 )
text = "00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mashing" type="Control" parent="GUI/C"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="AnimatedSprite" parent="GUI/C/Mashing"]
position = Vector2( 48, 184 )
frames = SubResource( 2 )
playing = true

[node name="BtnProgress" type="ProgressBar" parent="GUI/C/Mashing"]
margin_left = 64.0
margin_top = 176.0
margin_right = 224.0
margin_bottom = 192.0
rect_min_size = Vector2( 160, 16 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
max_value = 6.0
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner" type="TextureRect" parent="GUI/C"]
margin_left = 48.0
margin_top = -16.0
margin_right = 208.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressCont" type="Label" parent="GUI/C"]
visible = false
margin_left = 16.0
margin_top = 176.0
margin_right = 240.0
margin_bottom = 184.0
rect_min_size = Vector2( 16, 8 )
custom_fonts/font = SubResource( 1 )
text = "PRESS [SPACEBAR] TO CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressContReset" type="Label" parent="GUI/C"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 120.0
margin_top = 64.0
margin_right = -128.0
margin_bottom = 72.0
rect_min_size = Vector2( 8, 8 )
custom_fonts/font = SubResource( 1 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressPlay" type="Label" parent="GUI/C"]
margin_left = 32.0
margin_top = 176.0
margin_right = 224.0
margin_bottom = 184.0
rect_min_size = Vector2( 16, 8 )
custom_fonts/font = SubResource( 1 )
text = "PRESS [SPACEBAR] TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GO" type="TextureRect" parent="GUI/C"]
visible = false
margin_left = 104.0
margin_top = 104.0
margin_right = 152.0
margin_bottom = 120.0
rect_min_size = Vector2( 48, 16 )
texture = ExtResource( 9 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 16, 152 )
texture = ExtResource( 8 )

[node name="OpponentOne" type="Sprite" parent="."]
position = Vector2( 16, 112 )
texture = ExtResource( 2 )

[node name="OpponentTwo" type="Sprite" parent="."]
position = Vector2( 16, 72 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/press_cont = SubResource( 6 )
anims/press_play = SubResource( 7 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerBtnReset" to="." method="_on_TimerButtonReset_timeout"]
[connection signal="timeout" from="TimerOpponentOne" to="." method="_on_TimerOpponentOne_timeout"]
[connection signal="timeout" from="TimerOpponentTwo" to="." method="_on_TimerOpponentTwo_timeout"]
[connection signal="timeout" from="TimerContinue" to="." method="_on_TimerContinue_timeout"]
